Created Add Update Unit form

--- a/Web.config
+++ b/Web.config
@@ -14,7 +14,19 @@
 	<add key="WebDomain" value="localhost:44330"/>
 	<add key="FromEmail" value="kmfoodscan@gmail.com"/>
 	<add key="FromEmailPassword" value="foodscan123"/>
+	<add key="aspnet:MaxJsonDeserializerMembers" value="150000" />
 	</appSettings>
+	
+	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647" maxBufferPoolSize="524288">
+					<readerQuotas maxDepth="32" maxStringContentLength="2147483647"
+					  maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647"  />
+				</binding>
+			</basicHttpBinding>
+		</bindings>
+	</system.serviceModel>
 	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2"/>
@@ -27,6 +39,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
       </controls>
     </pages>
+   
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1"> 
