--- a/Nyumbani-Landlords.csproj
+++ b/Nyumbani-Landlords.csproj
@@ -112,6 +112,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AddUpdateBuilding.aspx" />
+    <Content Include="AddUpdateUnit.aspx" />
     <Content Include="assets\css\dashlite.css" />
     <Content Include="assets\css\dashlite.min.css" />
     <Content Include="assets\css\dashlite.rtl.css" />
@@ -2597,6 +2598,13 @@
     </Compile>
     <Compile Include="AddUpdateBuilding.aspx.designer.cs">
       <DependentUpon>AddUpdateBuilding.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AddUpdateUnit.aspx.cs">
+      <DependentUpon>AddUpdateUnit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AddUpdateUnit.aspx.designer.cs">
+      <DependentUpon>AddUpdateUnit.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
