--- a/Nyumbani-Landlords.csproj
+++ b/Nyumbani-Landlords.csproj
@@ -2761,6 +2761,7 @@
   <ItemGroup>
     <Folder Include="AnnouncmentImages\" />
     <Folder Include="App_Data\" />
+    <Folder Include="BillImages\" />
     <Folder Include="BuildingImages\" />
     <Folder Include="ContractImages\" />
     <Folder Include="InvoiceImages\" />
